chore(ci): Bump install-nix-action (+ nix) version
Upgrade to Nix 2.26.3 to workaround these errors from `nix run` within a
step which were fixed in https://github.com/NixOS/nix/pull/11581:

    unpacking 'github:NixOS/nixpkgs/2bfc080955153be0be56724be6fa5477b4eefabb' into the Git cache...
    error:
           … while fetching the input 'github:NixOS/nixpkgs/nixpkgs-unstable'

           error: creating Git repository '"/root/.cache/nix/tarball-cache"': failed to lock file '/root/.cache/nix/tarball-cache/config.lock' for writing:

My understanding (and from talking to Bryan) is that this doesn't affect
how we actually build and test Flox because we bundle our own version of
Nix within.

--- a/.github/actions/common-setup/action.yml
+++ b/.github/actions/common-setup/action.yml
@@ -30,7 +30,7 @@ runs:
   using: "composite"
   steps:
     - name: "Install newer Nix"
-      uses: "cachix/install-nix-action@V28"
+      uses: "cachix/install-nix-action@v31"
 
     - name: "Configure Nix"
       uses: "flox/configure-nix-action@main"
