--- a/cli/flox-rust-sdk/Cargo.toml
+++ b/cli/flox-rust-sdk/Cargo.toml
@@ -55,6 +55,7 @@ proptest-derive.workspace = true
 serial_test.workspace = true
 tracing-subscriber.workspace = true
 flox-test-utils.workspace = true
+catalog-api-v1 = { workspace = true, features = ["tests"] }
 
 [features]
 # allow exporting test helpers in dev mode only
