fix(ci): allow buildkite uploads to fail
Apparently we hit the monthly limit of test suite execution uploads. Doesn't
make sense to fail the whole pipeline for this.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -176,7 +176,8 @@ jobs:
             -F "tags[architecture]=$system" \
             -F "tags[nix_flakeref]=github:flox/flox/$GITHUB_SHA" \
             -F "tags[nix_attribute]=devShells.$system.default" \
-            https://analytics-api.buildkite.com/v1/uploads
+            https://analytics-api.buildkite.com/v1/uploads \
+            || true
 
 
       # This differs from `nix-build-bats-tests` in that:
