--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -36,7 +36,8 @@ flox-test-utils = { path = "flox-test-utils" }
 fslock = "0.2.1"
 fs_extra = "1.3.0"
 futures = "0.3"
-httpmock = { version = "0.7.0", default-features = false }
+# git pending: https://github.com/alexliesenfeld/httpmock/issues/127
+httpmock = { git = "https://github.com/alexliesenfeld/httpmock.git", default-features = false }
 indent = "0.1.1"
 indexmap = { version = "2.9.0", features = ["serde"] }
 indoc = "2.0.6"
