--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -37,7 +37,7 @@ fslock = "0.2.1"
 fs_extra = "1.3.0"
 futures = "0.3"
 # git pending: https://github.com/alexliesenfeld/httpmock/issues/127
-httpmock = { git = "https://github.com/alexliesenfeld/httpmock.git", default-features = false }
+httpmock = { git = "https://github.com/alexliesenfeld/httpmock.git", default-features = false , features = ["proxy", "record"] }
 indent = "0.1.1"
 indexmap = { version = "2.9.0", features = ["serde"] }
 indoc = "2.0.6"
