--- a/cli/flox-rust-sdk/Cargo.toml
+++ b/cli/flox-rust-sdk/Cargo.toml
@@ -45,6 +45,7 @@ serial_test = { workspace = true, features = ["file_locks"] }
 tracing-subscriber = { workspace = true, optional = true }
 proptest = { workspace = true, optional = true }
 proptest-derive = { workspace = true, optional = true }
+httpmock.workspace = true
 
 [dev-dependencies]
 anyhow.workspace = true
