feat: refactor NEF flox-build.mk additions
- updated package-builder/Makefile
- renamed BUILDS -> MANIFEST_BUILDS & associated variables for clarity
- factored out common functionality into COMMON_BUILD_VARS_template
- refactored new NIX_EXPRESSION_BUILD_template
- updated nef reflection logic to include hacked version of package outputs
  - Known issue: `flox build clean` broken by including list of outputs
    in NEF package reflection.

--- a/package-builder/Makefile
+++ b/package-builder/Makefile
@@ -1,6 +1,7 @@
 .DEFAULT_GOAL := all
 
-ALL = flox-build.mk build-manifest.nix
+ALL = flox-build.mk build-manifest.nix nef/default.nix \
+  $(addprefix nef/lib/,default.nix dirToAttrs.nix extendAttrSet.nix mkOverlay.nix reflect.nix)
 
 OS := $(shell uname -s)
 ifeq (Linux,$(OS))
@@ -22,15 +23,12 @@ libsandbox.dylib: sandbox.c closure.o
 .PHONY: all
 all: $(ALL)
 
-.PHONY: install
-install: $(ALL)
-	mkdir -p $(PREFIX)/libexec
-	cp $^ $(PREFIX)/libexec
+%/libexec_install: %
+	@mkdir -p $(PREFIX)/libexec/$(dir $(@D))
+	cp $< $(PREFIX)/libexec/$(@D)
 
-	# this is not how you do it
-	mkdir -p $(PREFIX)/libexec/nef/lib
-	cp nef/default.nix $(PREFIX)/libexec/nef
-	cp -r nef/lib $(PREFIX)/libexec/nef
+.PHONY: install
+install: $(addsuffix /libexec_install,$(ALL))
 
 .PHONY: tests
 tests:
