chore(tests): Split jupyter mocks
We can no longer use the same resolve response for two different package
sets because the resolve request bodies don't match.

--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -162,9 +162,13 @@ cmd = "flox install hello"
 pre_cmd = "flox init"
 cmd = "flox install hello-unfree"
 
-[resolve.jupyter_with_extensions]
+[resolve.jupyterlabs_widgets]
 pre_cmd = "flox init"
-cmd = "flox install jupyter python312Packages.jupyterlab-widgets python312Packages.jupyterlab-git"
+cmd = "flox install jupyter python312Packages.jupyterlab-widgets"
+
+[resolve.jupyterlabs_git]
+pre_cmd = "flox init"
+cmd = "flox install jupyter python312Packages.jupyterlab-git"
 
 [resolve.go]
 pre_cmd = "flox init"
