fix(test): Use correct mock for install by ID
This was failing because the name of the install ID in the resolve
request body has to match the generated mock. Fortunately we already
have a mock with a different install ID for a package.

--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -526,7 +526,7 @@ post_cmd = '''
     mv "$RESPONSE_FILE" "$env_dir/$(basename $RESPONSE_FILE)"
 '''
 
-# Used in list tests for packages whose install IDs != pkg-path
+# Used in install and list tests for packages whose install IDs != pkg-path
 [envs.hello_as_greeting]
 skip_if_output_exists = "envs/hello_as_greeting"
 files = ["envs/hello_as_greeting/manifest.toml"]
