fix(test): Add curl_after_hello mock fixture
This test needed a fixture where `hello` has already been locked and
`curl` is then being resolved.

--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -85,6 +85,10 @@ post_cmd = '''
     mv tmp.yaml "$RESPONSE_FILE"
 '''
 
+[resolve.curl_after_hello]
+pre_cmd = "flox init && flox install hello"
+cmd = "flox install curl"
+
 [resolve.emacs]
 pre_cmd = "flox init"
 cmd = "flox install emacs"
