fix(test): Pin NodeJS init test to <24
A refresh of the catalog mocks now picks up `nodejs_24` at v24.0.0 and
v24.0.1, both of which are missing builds and cause the integration
tests to build from source and timeout in CI:

    % https post api.flox.dev/api/v1/catalog/resolve \
        'items[0][name]=toplevel' \
        'items[0][descriptors][0][install_id]=nodejs' \
        'items[0][descriptors][0][attr_path]=nodejs_24' \
        'items[0][descriptors][0][systems][]=x86_64-linux' \
        'items[0][descriptors][0][systems][]=aarch64-linux' \
        'items[0][descriptors][0][systems][]=x86_64-darwin' \
        'items[0][descriptors][0][systems][]=aarch64-darwin' \
    | jq '.items[].page.packages[] | {name, version, system, missing_builds}'

    {
      "name": "nodejs-24.0.1",
      "version": "24.0.1",
      "system": "x86_64-linux",
      "missing_builds": true
    }
    {
      "name": "nodejs-24.0.1",
      "version": "24.0.1",
      "system": "aarch64-linux",
      "missing_builds": false
    }
    {
      "name": "nodejs-24.0.1",
      "version": "24.0.1",
      "system": "x86_64-darwin",
      "missing_builds": false
    }
    {
      "name": "nodejs-24.0.1",
      "version": "24.0.1",
      "system": "aarch64-darwin",
      "missing_builds": false
    }

--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -384,10 +384,10 @@ pre_cmd = '''
 '''
 cmd = "flox init --auto-setup"
 
-[init.nodejs_gt_20]
-files = ["init/node/nodejs_gt_20"]
+[init.nodejs_lt_24]
+files = ["init/node/nodejs_lt_24"]
 pre_cmd = '''
-    cp -r nodejs_gt_20/* .
+    cp -r nodejs_lt_24/* .
 '''
 cmd = "flox init --auto-setup"
 
