feat: add build support in mk_data
This is distinct from the `envs` group because the layout of the files
is different. The output of each `envs` job tends to be a directory that
contains the original manifest and a lockfile generated from that
manifest. The idea with the `build` section is that you can put an
entire environment in the input data, and the output will also contain
that environment along with the YAML response file e.g. you should be
able to go into the input or output directory and run `flox build`.

--- a/test_data/config.toml
+++ b/test_data/config.toml
@@ -775,3 +775,24 @@ myhello.command = """
 myhello.runtime-packages = [ "hello", "goodbye" ]
 ' | flox lock-manifest - > "$RESPONSE_FILE"
 '''
+
+[build.hello]
+files = ["build/hello/hello.c", "build/hello/.flox"]
+pre_cmd = '''
+    rm .flox/env/manifest.lock
+'''
+cmd = '''
+    # re-resolve and build
+    flox lock-manifest .flox/env/manifest.toml > .flox/env/manifest.lock
+'''
+post_cmd = '''
+    build_output_dir="$(dirname "$RESPONSE_FILE")"
+    build_name="$(basename -s .yaml "$RESPONSE_FILE")"
+    resp_file="$(basename "$RESPONSE_FILE")"
+    build_dir="$build_output_dir/$build_name"
+    mkdir -p "$build_dir"
+    mv "$RESPONSE_FILE" "$build_dir/$resp_file"
+    cp -R .flox "$build_dir/.flox"
+    # Copy over any source files
+    cp hello.c "$build_dir/hello.c"
+'''
