test: add unit test re-generation to just gen-data
Modify just gen-data to additionally run all unit tests in order to regenerate
all mocks for unit tests. This is slower than necessary since it runs all tests,
not just those with mocks, but since we shouldn't be regenerating too often, and
it's essentially the same speed as our unit tests, it should be fast enough for
now.

I ran just gen-data to test and committed the resulting mocks.

--- a/test_data/unit_test_generated/go_version_from_content_returns_none_on_incompatible_version_with_catalog.yaml
+++ b/test_data/unit_test_generated/go_version_from_content_returns_none_on_incompatible_version_with_catalog.yaml
@@ -6,7 +6,7 @@ then:
   status: 200
   header:
   - name: date
-    value: Wed, 14 May 2025 21:28:56 GMT
+    value: Tue, 20 May 2025 00:33:03 GMT
   - name: content-type
     value: application/json
   - name: content-length
@@ -14,5 +14,5 @@ then:
   - name: server
     value: uvicorn
   - name: apigw-requestid
-    value: Kk6rqjyfoAMESzw=
+    value: K10V-gErIAMEbUg=
   body: '{"items":[{"name":"go","page":null,"messages":[{"level":"error","type":"constraints_too_tight","message":"Resolution constraints are too tight.","context":{}}]}]}'
