--- a/test_data/unit_test_generated/try_find_compatible_yarn_yarn_unavailable_with_catalog.yaml
+++ b/test_data/unit_test_generated/try_find_compatible_yarn_yarn_unavailable_with_catalog.yaml
@@ -5,7 +5,7 @@ then:
   status: 200
   header:
   - name: date
-    value: Mon, 19 May 2025 23:33:58 GMT
+    value: Tue, 20 May 2025 00:33:05 GMT
   - name: content-type
     value: application/json
   - name: content-length
@@ -13,7 +13,7 @@ then:
   - name: server
     value: uvicorn
   - name: apigw-requestid
-    value: K1rr8iJHIAMEb-Q=
+    value: K10WGgp8oAMEVOw=
   body: '{"items":[{"attr_path":"nodejs_14","catalog":null,"pkg_path":"nodejs_14","name":"nodejs-14.21.3","pname":"nodejs_14","version":"14.21.3","description":"Event-driven I/O framework for the V8 JavaScript engine","stabilities":[],"system":"aarch64-darwin"},{"attr_path":"nodejs_16","catalog":null,"pkg_path":"nodejs_16","name":"nodejs-16.20.2","pname":"nodejs_16","version":"16.20.2","description":"Event-driven I/O framework for the V8 JavaScript engine","stabilities":[],"system":"aarch64-darwin"},{"attr_path":"nodejs_18","catalog":null,"pkg_path":"nodejs_18","name":"nodejs-18.20.8","pname":"nodejs_18","version":"18.20.8","description":"Event-driven I/O framework for the V8 JavaScript engine","stabilities":[],"system":"aarch64-darwin"},{"attr_path":"nodejs_19","catalog":null,"pkg_path":"nodejs_19","name":"nodejs-19.9.0","pname":"nodejs_19","version":"19.9.0","description":"Event-driven I/O framework for the V8 JavaScript engine","stabilities":[],"system":"aarch64-darwin"},{"attr_path":"nodejs_20","catalog":null,"pkg_path":"nodejs_20","name":"nodejs-20.19.1","pname":"nodejs_20","version":"20.19.1","description":"Event-driven I/O framework for the V8 JavaScript engine","stabilities":[],"system":"aarch64-darwin"},{"attr_path":"nodejs_21","catalog":null,"pkg_path":"nodejs_21","name":"nodejs-21.7.3","pname":"nodejs_21","version":"21.7.3","description":"Event-driven I/O framework for the V8 JavaScript engine","stabilities":[],"system":"aarch64-darwin"},{"attr_path":"nodejs_22","catalog":null,"pkg_path":"nodejs_22","name":"nodejs-22.14.0","pname":"nodejs_22","version":"22.14.0","description":"Event-driven I/O framework for the V8 JavaScript engine","stabilities":[],"system":"aarch64-darwin"},{"attr_path":"nodejs_23","catalog":null,"pkg_path":"nodejs_23","name":"nodejs-23.11.0","pname":"nodejs_23","version":"23.11.0","description":"Event-driven I/O framework for the V8 JavaScript engine","stabilities":[],"system":"aarch64-darwin"},{"attr_path":"nodejs_24","catalog":null,"pkg_path":"nodejs_24","name":"nodejs-24.0.1","pname":"nodejs_24","version":"24.0.1","description":"Event-driven I/O framework for the V8 JavaScript engine","stabilities":[],"system":"aarch64-darwin"},{"attr_path":"nodejs_latest","catalog":null,"pkg_path":"nodejs_latest","name":"nodejs-24.0.1","pname":"nodejs_latest","version":"24.0.1","description":"Event-driven I/O framework for the V8 JavaScript engine","stabilities":[],"system":"aarch64-darwin"},{"attr_path":"haxePackages.hxnodejs_4","catalog":null,"pkg_path":"haxePackages.hxnodejs_4","name":"hxnodejs-4.0.9","pname":"hxnodejs_4","version":"4.0.9","description":"Extern definitions for node.js 4.x","stabilities":[],"system":"aarch64-darwin"},{"attr_path":"haxePackages.hxnodejs_6","catalog":null,"pkg_path":"haxePackages.hxnodejs_6","name":"hxnodejs-6.9.0","pname":"hxnodejs_6","version":"6.9.0","description":"Extern definitions for node.js 6.9","stabilities":[],"system":"aarch64-darwin"}],"total_count":12}'
 ---
 when:
@@ -24,7 +24,7 @@ then:
   status: 200
   header:
   - name: date
-    value: Mon, 19 May 2025 23:33:59 GMT
+    value: Tue, 20 May 2025 00:33:07 GMT
   - name: content-type
     value: application/json
   - name: content-length
@@ -32,7 +32,7 @@ then:
   - name: server
     value: uvicorn
   - name: apigw-requestid
-    value: K1rsBhSIIAMEVqg=
+    value: K10WPhGboAMEV1A=
   body: '{"items":[{"name":"nodejs","page":{"page":799423,"url":"","packages":[{"catalog":"nixpkgs","attr_path":"nodejs","pkg_path":"nodejs","derivation":"/nix/store/xvmi92k10p9ccqz68rr4w2l6m9ixpk5b-nodejs-22.14.0.drv","name":"nodejs-22.14.0","pname":"nodejs","version":"22.14.0","system":"aarch64-darwin","outputs":[{"name":"dev","store_path":"/nix/store/9xaa4qy83dpy95d1ffibkfzzgyyrp7hk-nodejs-22.14.0-dev"},{"name":"out","store_path":"/nix/store/j2rsxk1lxlapi903kxkvnsdlb0pfbnl1-nodejs-22.14.0"},{"name":"libv8","store_path":"/nix/store/dcjrxq66pzqjvabbkz596sfbwlzgy1gm-nodejs-22.14.0-libv8"}],"outputs_to_install":["out"],"description":"Event-driven I/O framework for the V8 JavaScript engine","license":"MIT","locked_url":"https://github.com/flox/nixpkgs?rev=adaa24fbf46737f3f1b5497bf64bae750f82942e","rev":"adaa24fbf46737f3f1b5497bf64bae750f82942e","rev_count":799423,"rev_date":"2025-05-13T23:30:50Z","broken":false,"insecure":false,"unfree":false,"missing_builds":false,"stabilities":["staging","unstable"],"scrape_date":"2025-05-16T04:21:36.542247Z","cache_uri":null,"install_id":"nodejs"},{"catalog":"nixpkgs","attr_path":"nodejs","pkg_path":"nodejs","derivation":"/nix/store/nfsdr7c7dyb7bl65ck9hvw0w5qbainws-nodejs-22.14.0.drv","name":"nodejs-22.14.0","pname":"nodejs","version":"22.14.0","system":"aarch64-linux","outputs":[{"name":"dev","store_path":"/nix/store/9hv74w50r20z1f1flnpza0aicz5agg8i-nodejs-22.14.0-dev"},{"name":"out","store_path":"/nix/store/8v7hqm22mk2w725sqwqcnym5jznqmn64-nodejs-22.14.0"},{"name":"libv8","store_path":"/nix/store/ww17b0kj7zawsa17l2kw5yi6019lddfy-nodejs-22.14.0-libv8"}],"outputs_to_install":["out"],"description":"Event-driven I/O framework for the V8 JavaScript engine","license":"MIT","locked_url":"https://github.com/flox/nixpkgs?rev=adaa24fbf46737f3f1b5497bf64bae750f82942e","rev":"adaa24fbf46737f3f1b5497bf64bae750f82942e","rev_count":799423,"rev_date":"2025-05-13T23:30:50Z","broken":false,"insecure":false,"unfree":false,"missing_builds":false,"stabilities":["staging","unstable"],"scrape_date":"2025-05-16T04:40:24.476727Z","cache_uri":null,"install_id":"nodejs"},{"catalog":"nixpkgs","attr_path":"nodejs","pkg_path":"nodejs","derivation":"/nix/store/7157kvxcqj6j3jxp6r5lpzg6b8zmd3wn-nodejs-22.14.0.drv","name":"nodejs-22.14.0","pname":"nodejs","version":"22.14.0","system":"x86_64-darwin","outputs":[{"name":"dev","store_path":"/nix/store/6wb73ifswly0ajfp3zv125bqnvzb4k37-nodejs-22.14.0-dev"},{"name":"out","store_path":"/nix/store/sn8xmika3xqfpzzznbcv061gym6njija-nodejs-22.14.0"},{"name":"libv8","store_path":"/nix/store/v4nnkjh9jdz0wsq7l3f4mdfh2skjvwal-nodejs-22.14.0-libv8"}],"outputs_to_install":["out"],"description":"Event-driven I/O framework for the V8 JavaScript engine","license":"MIT","locked_url":"https://github.com/flox/nixpkgs?rev=adaa24fbf46737f3f1b5497bf64bae750f82942e","rev":"adaa24fbf46737f3f1b5497bf64bae750f82942e","rev_count":799423,"rev_date":"2025-05-13T23:30:50Z","broken":false,"insecure":false,"unfree":false,"missing_builds":false,"stabilities":["staging","unstable"],"scrape_date":"2025-05-16T04:56:47.522065Z","cache_uri":null,"install_id":"nodejs"},{"catalog":"nixpkgs","attr_path":"nodejs","pkg_path":"nodejs","derivation":"/nix/store/vcbkrrp8jzqvchw30klpq54ac4l2gmhl-nodejs-22.14.0.drv","name":"nodejs-22.14.0","pname":"nodejs","version":"22.14.0","system":"x86_64-linux","outputs":[{"name":"dev","store_path":"/nix/store/sbqvdlpp1zp6fdr3cb0mqyprjbcf2ihn-nodejs-22.14.0-dev"},{"name":"out","store_path":"/nix/store/50lhzpd68v47x6jy0b8b3p91n2zv3lv4-nodejs-22.14.0"},{"name":"libv8","store_path":"/nix/store/ianbd6y7fbm32073q239zdxlcmjwvm57-nodejs-22.14.0-libv8"}],"outputs_to_install":["out"],"description":"Event-driven I/O framework for the V8 JavaScript engine","license":"MIT","locked_url":"https://github.com/flox/nixpkgs?rev=adaa24fbf46737f3f1b5497bf64bae750f82942e","rev":"adaa24fbf46737f3f1b5497bf64bae750f82942e","rev_count":799423,"rev_date":"2025-05-13T23:30:50Z","broken":false,"insecure":false,"unfree":false,"missing_builds":false,"stabilities":["staging","unstable"],"scrape_date":"2025-05-16T05:18:51.034365Z","cache_uri":null,"install_id":"nodejs"}],"messages":[],"complete":true},"messages":[]}]}'
 ---
 when:
@@ -43,7 +43,7 @@ then:
   status: 200
   header:
   - name: date
-    value: Mon, 19 May 2025 23:34:00 GMT
+    value: Tue, 20 May 2025 00:33:10 GMT
   - name: content-type
     value: application/json
   - name: content-length
@@ -51,5 +51,5 @@ then:
   - name: server
     value: uvicorn
   - name: apigw-requestid
-    value: K1rsMj2AIAMEbbg=
+    value: K10Wlh9WIAMEVMA=
   body: '{"items":[{"name":"yarn-berry","page":null,"messages":[{"level":"error","type":"constraints_too_tight","message":"Resolution constraints are too tight.","context":{}}]},{"name":"yarn","page":null,"messages":[{"level":"error","type":"constraints_too_tight","message":"Resolution constraints are too tight.","context":{}}]}]}'
