--- a/test_data/unit_test_generated/go_version_from_content_returns_none_on_incompatible_version_with_catalog.yaml
+++ b/test_data/unit_test_generated/go_version_from_content_returns_none_on_incompatible_version_with_catalog.yaml
@@ -6,7 +6,7 @@ then:
   status: 200
   header:
   - name: date
-    value: Tue, 20 May 2025 00:33:03 GMT
+    value: Thu, 22 May 2025 16:35:46 GMT
   - name: content-type
     value: application/json
   - name: content-length
@@ -14,5 +14,5 @@ then:
   - name: server
     value: uvicorn
   - name: apigw-requestid
-    value: K10V-gErIAMEbUg=
+    value: K-nPOgzXIAMEYJA=
   body: '{"items":[{"name":"go","page":null,"messages":[{"level":"error","type":"constraints_too_tight","message":"Resolution constraints are too tight.","context":{}}]}]}'
