--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -47,7 +47,7 @@ inquire = "0.6.0"
 indicatif = "0.17"
 itertools = "0.12.1"
 jsonwebtoken = "9.3"
-log = "0.4.27"
+log = { version = "0.4.27", features = ["kv"]}
 nix = { version = "0.28", features = ["signal", "process", "user"] }
 oauth2 = "4.4"
 once_cell = "1.21.3"
